Various small layout issues

--- a/auxilium/src/styles/buttons.scss
+++ b/auxilium/src/styles/buttons.scss
@@ -5,10 +5,7 @@
     color: white;
     height: 50px;
     width: 200px;
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding: 10px 25px;
     cursor: pointer;
     text-align: center;
 }
@@ -20,9 +17,9 @@
     color: #FD3D37;
     height: 40px;
     width: 100px;
-    margin: 1rem;
-    margin-left: 0;
-    font-family: 'Avenir Next';
+    margin: 1rem 1rem 1rem 0;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+
 }
 
 .submit-button {
@@ -32,7 +29,6 @@
     color: white;
     height: 40px;
     width: 100px;
-    margin: 1rem;
-    margin-left: 0;
-    font-family: 'Avenir Next';
+    margin: 1rem 1rem 1rem 0;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
