--- a/auxilium/src/styles/navigation.scss
+++ b/auxilium/src/styles/navigation.scss
@@ -18,8 +18,10 @@ $nav-height: 60px;
 .innerContainer {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
+    justify-content: space-between;
     height: 100%;
+    padding: 0 8px;
 }
 
 .logo {
@@ -36,7 +38,7 @@ $nav-height: 60px;
 .navLinks {
     display: flex;
     cursor: pointer;
-    font-family: 'AvenirNext-Regular';
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     a {
         text-decoration: none;
         color: black;
@@ -53,11 +55,12 @@ $nav-height: 60px;
             color: black;
         }
     }
-    display: flex;
     flex-direction: row;
     height: 100%;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    padding: 0 1rem;
+    &:hover {
+        background-color: #eeeeee;
+    }
 }
 
 .footer-style {
